--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="activity-1/index.html" alt="Activity 1" target="_blank">Activity 1</a></li>
         <li><a href="activity-2/index.html" alt="Activity 2" target="_blank">Activity 2</a></li>
+        <li>Activity 3</li>
     </ul>
 </body>
 </html>
