--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <ul>
         <li><a href="activity-1/index.html" alt="Activity 1" target="_blank">Activity 1</a></li>
         <li><a href="activity-2/index.html" alt="Activity 2" target="_blank">Activity 2</a></li>
-        <li>Activity 3</li>
+        <li><a href="activity-3/index.html" alt="Activity 3" target="_blank">Activity 3</a></li>
+        <li><a href="activity-4/index.html" alt="Activity 4" target="_blank">Activity 4</a></li>
     </ul>
 </body>
 </html>
