--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <li><a href="activity-2/index.html" alt="Activity 2" target="_blank">Activity 2</a></li>
         <li><a href="activity-3/index.html" alt="Activity 3" target="_blank">Activity 3</a></li>
         <li><a href="activity-4/index.html" alt="Activity 4" target="_blank">Activity 4</a></li>
+        <li><a href="activity-5/index.html" alt="Activity 5" target="_blank">Activity 5</a></li>
     </ul>
 </body>
 </html>
