--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <li><a href="activity-3/index.html" alt="Activity 3" target="_blank">Activity 3</a></li>
         <li><a href="activity-4/index.html" alt="Activity 4" target="_blank">Activity 4</a></li>
         <li><a href="activity-5/index.html" alt="Activity 5" target="_blank">Activity 5</a></li>
+        <li><a href="activity-6/index.html" alt="Activity 6" target="_blank">Activity 6</a></li>
     </ul>
 </body>
 </html>
