--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li><a href="activity-4/index.html" alt="Activity 4" target="_blank">Activity 4</a></li>
         <li><a href="activity-5/index.html" alt="Activity 5" target="_blank">Activity 5</a></li>
         <li><a href="activity-6/index.html" alt="Activity 6" target="_blank">Activity 6</a></li>
+        <li><a href="activity-7/index.html" alt="Activity 7" target="_blank">Activity 7</a></li>
     </ul>
 </body>
 </html>
